# wajah

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  codestyle.txt
